test : 테스트 코드 추가 - closes #1
Controller - 예약 조회 (관리자, 일반 사용자)
Service - 예약 취소(관리자, 일반 사용자)
Repository - 예약 중복 체크